src/main/java/kr/ac/snu/ids/PRJ1_2_2013_12295/SimpleDBMSParser.java
/* SimpleDBMSParser.java */
/* Generated By:JavaCC: Do not edit this line. SimpleDBMSParser.java */
package kr.ac.snu.ids.PRJ1_2_2013_12295;
import java.io.UnsupportedEncodingException;
import java.io.File;
import java.util.ArrayList;

import com.sleepycat.je.Database;
import com.sleepycat.je.DatabaseException;
import com.sleepycat.je.DatabaseConfig;
import com.sleepycat.je.DatabaseEntry;
import com.sleepycat.je.Cursor;
import com.sleepycat.je.LockMode;
import com.sleepycat.je.OperationStatus;
import com.sleepycat.je.Environment;
import com.sleepycat.je.EnvironmentConfig;

import kr.ac.snu.ids.PRJ1_2_2013_12295.database.*;
import kr.ac.snu.ids.PRJ1_2_2013_12295.query.*;

public class SimpleDBMSParser implements SimpleDBMSParserConstants {
  //constants to distinguish query and print outputs.
  public static final int PRINT_SYNTAX_ERROR = 0;
  public static final int PRINT_CREATE_TABLE = 1;
  public static final int PRINT_DROP_TABLE = 2;
  public static final int PRINT_DESC = 3;
  public static final int PRINT_INSERT = 4;
  public static final int PRINT_DELETE = 5;
  public static final int PRINT_SELECT = 6;
  public static final int PRINT_SHOW_TABLES = 7;

  private static String PROMPT = "DB_2013-12295> ";

  public static DBManager manager;

  public static void main(String args[]) throws ParseException
  {
    manager = new DBManager();

    SimpleDBMSParser parser = new SimpleDBMSParser(System.in);
    System.out.print(PROMPT);

    while (true)
    {
      try
      {
        parser.command();
      }
      catch (DBException dbe)
      {
        System.out.println(dbe.getMessage());
        SimpleDBMSParser.ReInit(System.in);
        System.out.print(PROMPT);
      }
      catch (ParseException e)
      {
        printMessage(PRINT_SYNTAX_ERROR);
        SimpleDBMSParser.ReInit(System.in);
        System.out.print(PROMPT);
      }
      catch (Exception e)
      {
        System.out.println(e.getMessage());
        SimpleDBMSParser.ReInit(System.in);
        System.out.print(PROMPT);
      }
    }

  }

  public static void printMessage(int q)
  {
    //q is given by query() below
    switch(q)
    {
      case PRINT_SYNTAX_ERROR:
        System.out.println("Syntax error");
        break;
      case PRINT_CREATE_TABLE:
        System.out.println("\'CREATE TABLE\' requested");
        break;
      case PRINT_DROP_TABLE:
        System.out.println("\'DROP TABLE\' requested");
        break;
      case PRINT_DESC:
        System.out.println("\'DESC\' requested");
        break;
      case PRINT_INSERT:
        System.out.println("\'INSERT\' requested");
        break;
      case PRINT_DELETE:
        System.out.println("\'DELETE\' requested");
        break;
      case PRINT_SELECT:
        System.out.println("\'SELECT\' requested");
        break;
      case PRINT_SHOW_TABLES:
        System.out.println("\'SHOW TABLES\' requested");
        break;
    }
  }

  static final public void command() throws ParseException, DBException {
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case CREATE:
    case DROP:
    case DESC:
    case INSERT:
    case DELETE:
    case SELECT:
    case SHOW:{
      queryList();
      break;
      }
    case EXIT:{
      jj_consume_token(EXIT);
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case SEMICOLON:{
        jj_consume_token(SEMICOLON);
        break;
        }
      case END:{
        jj_consume_token(END);
        break;
        }
      default:
        jj_la1[0] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
manager.close();
      System.exit(0);
      break;
      }
    default:
      jj_la1[1] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
}

  static final public void queryList() throws ParseException, DBException {int q;
    label_1:
    while (true) {
      q = query();
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case END:{
        jj_consume_token(END);
printMessage(q);
          //prompt when new query starts
          System.out.print(PROMPT);
        break;
        }
      case SEMICOLON:{
        jj_consume_token(SEMICOLON);
printMessage(q);
        break;
        }
      default:
        jj_la1[2] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case CREATE:
      case DROP:
      case DESC:
      case INSERT:
      case DELETE:
      case SELECT:
      case SHOW:{
        ;
        break;
        }
      default:
        jj_la1[3] = jj_gen;
        break label_1;
      }
    }
}

  static final public int query() throws ParseException, DBException {int q;
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case CREATE:{
      createTableQuery();
q = PRINT_CREATE_TABLE;
      break;
      }
    case DROP:{
      dropTableQuery();
q = PRINT_DROP_TABLE;
      break;
      }
    case DESC:{
      descQuery();
q = PRINT_DESC;
      break;
      }
    case INSERT:{
      insertQuery();
q = PRINT_INSERT;
      break;
      }
    case DELETE:{
      deleteQuery();
q = PRINT_DELETE;
      break;
      }
    case SELECT:{
      selectQuery();
q = PRINT_SELECT;
      break;
      }
    case SHOW:{
      showTablesQuery();
q = PRINT_SHOW_TABLES;
      break;
      }
    default:
      jj_la1[4] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
{if ("" != null) return q;}
    throw new Error("Missing return statement in function");
}

//below regex for queries are similar to the ones in grammar file. 

/// 0. easy ones
  static final public void dropTableQuery() throws ParseException {
    jj_consume_token(DROP);
    jj_consume_token(TABLE);
    tableName();
}

  static final public void descQuery() throws ParseException {
    jj_consume_token(DESC);
    tableName();
}

  static final public void showTablesQuery() throws ParseException {
    jj_consume_token(SHOW);
    jj_consume_token(TABLES);
}

/// 0. easy ones 

/// 1. for createTableQuery()
  static final public 
void createTableQuery() throws ParseException, DBException {String tableName;
  CreateQuery createQuery;
    jj_consume_token(CREATE);
    jj_consume_token(TABLE);
    tableName = tableName();
createQuery = new CreateQuery(tableName);
    tableElementList(createQuery);
manager.createTable(createQuery);
}

  static final public void tableElementList(CreateQuery createQuery) throws ParseException {
    jj_consume_token(LEFT_PAREN);
    tableElement(createQuery);
    label_2:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case COMMA:{
        ;
        break;
        }
      default:
        jj_la1[5] = jj_gen;
        break label_2;
      }
      jj_consume_token(COMMA);
      tableElement(createQuery);
    }
    jj_consume_token(RIGHT_PAREN);
}

  static final public void tableElement(CreateQuery createQuery) throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case LEGAL_IDENTIFIER:{
      columnDefinition(createQuery);
      break;
      }
    case PRIMARY:
    case FOREIGN:{
      tableConstraintDefinition(createQuery);
      break;
      }
    default:
      jj_la1[6] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
}

  static final public void columnDefinition(CreateQuery createQuery) throws ParseException {Column column;
  String name;
    name = columnName();
column = new Column(name);
    dataType(column);
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case NOT:{
      jj_consume_token(NOT);
      jj_consume_token(NULL);
column.setNullable(false);
      break;
      }
    default:
      jj_la1[7] = jj_gen;
      ;
    }
createQuery.addColumn(column);
}

  static final public void tableConstraintDefinition(CreateQuery createQuery) throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case PRIMARY:{
      primaryKeyConstraint(createQuery);
      break;
      }
    case FOREIGN:{
      referentialConstraint(createQuery);
      break;
      }
    default:
      jj_la1[8] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
}

  static final public void primaryKeyConstraint(CreateQuery createQuery) throws ParseException {ArrayList<String> primaryKeyNames;
    jj_consume_token(PRIMARY);
    jj_consume_token(KEY);
    primaryKeyNames = columnNameList();
for (String columnName : primaryKeyNames) {
      createQuery.addPrimaryKeyColumn(columnName);
    }
}

  static final public void referentialConstraint(CreateQuery createQuery) throws ParseException {ArrayList<String> referencings;
  ArrayList<String> referenceds;
  String targetTableName;
  CreateQuery.ReferenceConstraint referenceData;
    jj_consume_token(FOREIGN);
    jj_consume_token(KEY);
    referencings = columnNameList();
    jj_consume_token(REFERENCES);
    targetTableName = tableName();
    referenceds = columnNameList();
referenceData = createQuery.new ReferenceConstraint();
    referenceData.setReferencings(referencings);
    referenceData.setReferenceds(referenceds);
    referenceData.setTargetTableName(targetTableName);
    createQuery.addReference(referenceData);
}

  static final public ArrayList<String> columnNameList() throws ParseException {ArrayList<String> names;
  String name;
    jj_consume_token(LEFT_PAREN);
    name = columnName();
names = new ArrayList<String>();
    names.add(name);
    label_3:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case COMMA:{
        ;
        break;
        }
      default:
        jj_la1[9] = jj_gen;
        break label_3;
      }
      jj_consume_token(COMMA);
      name = columnName();
names.add(name);
    }
    jj_consume_token(RIGHT_PAREN);
{if ("" != null) return names;}
    throw new Error("Missing return statement in function");
}

  static final public void dataType(Column column) throws ParseException {Token charLength;
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case INT:{
      jj_consume_token(INT);
column.setDataType(DataType.INT);
      break;
      }
    case CHAR:{
      jj_consume_token(CHAR);
      jj_consume_token(LEFT_PAREN);
      charLength = jj_consume_token(INT_VALUE);
      jj_consume_token(RIGHT_PAREN);
column.setDataType(DataType.CHAR);
      column.setCharLength(Integer.parseInt(charLength.toString()));
      break;
      }
    case DATE:{
      jj_consume_token(DATE);
column.setDataType(DataType.DATE);
      break;
      }
    default:
      jj_la1[10] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
}

  static final public String tableName() throws ParseException {Token name;
    name = jj_consume_token(LEGAL_IDENTIFIER);
{if ("" != null) return name.toString().toLowerCase();}
    throw new Error("Missing return statement in function");
}

  static final public String columnName() throws ParseException {Token name;
    name = jj_consume_token(LEGAL_IDENTIFIER);
{if ("" != null) return name.toString().toLowerCase();}
    throw new Error("Missing return statement in function");
}

/// 1. for createTableQuery


/// 2. for selectQuery
  static final public 
void selectQuery() throws ParseException {
    jj_consume_token(SELECT);
    selectList();
    tableExpression();
}

  static final public void selectList() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case ASTERISK:{
      jj_consume_token(ASTERISK);
      break;
      }
    case LEGAL_IDENTIFIER:{
      selectedColumn();
      label_4:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case COMMA:{
          ;
          break;
          }
        default:
          jj_la1[11] = jj_gen;
          break label_4;
        }
        jj_consume_token(COMMA);
        selectedColumn();
      }
      break;
      }
    default:
      jj_la1[12] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
}

  static final public void selectedColumn() throws ParseException {
    if (jj_2_1(2)) {
      tableName();
      jj_consume_token(PERIOD);
    } else {
      ;
    }
    columnName();
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case AS:{
      jj_consume_token(AS);
      columnName();
      break;
      }
    default:
      jj_la1[13] = jj_gen;
      ;
    }
}

  static final public void tableExpression() throws ParseException {
    fromClause();
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case WHERE:{
      whereClause();
      break;
      }
    default:
      jj_la1[14] = jj_gen;
      ;
    }
}

  static final public void fromClause() throws ParseException {
    jj_consume_token(FROM);
    tableReferenceList();
}

  static final public void tableReferenceList() throws ParseException {
    referedTable();
    label_5:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case COMMA:{
        ;
        break;
        }
      default:
        jj_la1[15] = jj_gen;
        break label_5;
      }
      jj_consume_token(COMMA);
      referedTable();
    }
}

  static final public void referedTable() throws ParseException {
    tableName();
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case AS:{
      jj_consume_token(AS);
      tableName();
      break;
      }
    default:
      jj_la1[16] = jj_gen;
      ;
    }
}

  static final public void whereClause() throws ParseException {
    jj_consume_token(WHERE);
    booleanValueExpression();
}

  static final public void booleanValueExpression() throws ParseException {
    booleanTerm();
    label_6:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case OR:{
        ;
        break;
        }
      default:
        jj_la1[17] = jj_gen;
        break label_6;
      }
      jj_consume_token(OR);
      booleanTerm();
    }
}

  static final public void booleanTerm() throws ParseException {
    booleanFactor();
    label_7:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case AND:{
        ;
        break;
        }
      default:
        jj_la1[18] = jj_gen;
        break label_7;
      }
      jj_consume_token(AND);
      booleanFactor();
    }
}

  static final public void booleanFactor() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case NOT:{
      jj_consume_token(NOT);
      break;
      }
    default:
      jj_la1[19] = jj_gen;
      ;
    }
    booleanTest();
}

  static final public void booleanTest() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case INT_VALUE:
    case LEGAL_IDENTIFIER:
    case DATE_VALUE:
    case CHAR_STRING:{
      predicate();
      break;
      }
    case LEFT_PAREN:{
      parenthesizedBooleanExpression();
      break;
      }
    default:
      jj_la1[20] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
}

  static final public void parenthesizedBooleanExpression() throws ParseException {
    jj_consume_token(LEFT_PAREN);
    booleanValueExpression();
    jj_consume_token(RIGHT_PAREN);
}

  static final public void predicate() throws ParseException {
    if (jj_2_2(4)) {
      comparisonPredicate();
    } else {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case LEGAL_IDENTIFIER:{
        nullPredicate();
        break;
        }
      default:
        jj_la1[21] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
}

  static final public void comparisonPredicate() throws ParseException {
    compOperand();
    jj_consume_token(COMP_OP);
    compOperand();
}

  static final public void compOperand() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case INT_VALUE:
    case DATE_VALUE:
    case CHAR_STRING:{
      comparableValue();
      break;
      }
    case LEGAL_IDENTIFIER:{
      if (jj_2_3(2)) {
        tableName();
        jj_consume_token(PERIOD);
      } else {
        ;
      }
      columnName();
      break;
      }
    default:
      jj_la1[22] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
}

  static final public void comparableValue() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case INT_VALUE:{
      jj_consume_token(INT_VALUE);
      break;
      }
    case CHAR_STRING:{
      jj_consume_token(CHAR_STRING);
      break;
      }
    case DATE_VALUE:{
      jj_consume_token(DATE_VALUE);
      break;
      }
    default:
      jj_la1[23] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
}

  static final public void nullPredicate() throws ParseException {
    if (jj_2_4(2)) {
      tableName();
      jj_consume_token(PERIOD);
    } else {
      ;
    }
    columnName();
    nullOperation();
}

  static final public void nullOperation() throws ParseException {
    jj_consume_token(IS);
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case NOT:{
      jj_consume_token(NOT);
      break;
      }
    default:
      jj_la1[24] = jj_gen;
      ;
    }
    jj_consume_token(NULL);
}

/// 2. for selectQuery


/// 3. for insert,delete
  static final public 
void insertQuery() throws ParseException {
    jj_consume_token(INSERT);
    jj_consume_token(INTO);
    tableName();
    insertColumnsAndSource();
}

  static final public void deleteQuery() throws ParseException {
    jj_consume_token(DELETE);
    jj_consume_token(FROM);
    tableName();
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case WHERE:{
      whereClause();
      break;
      }
    default:
      jj_la1[25] = jj_gen;
      ;
    }
}

  static final public void insertColumnsAndSource() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case LEFT_PAREN:{
      columnNameList();
      break;
      }
    default:
      jj_la1[26] = jj_gen;
      ;
    }
    valueList();
}

  static final public void valueList() throws ParseException {
    jj_consume_token(VALUES);
    jj_consume_token(LEFT_PAREN);
    value();
    label_8:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case COMMA:{
        ;
        break;
        }
      default:
        jj_la1[27] = jj_gen;
        break label_8;
      }
      jj_consume_token(COMMA);
      value();
    }
    jj_consume_token(RIGHT_PAREN);
}

  static final public void value() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case NULL:{
      jj_consume_token(NULL);
      break;
      }
    case INT_VALUE:
    case DATE_VALUE:
    case CHAR_STRING:{
      comparableValue();
      break;
      }
    default:
      jj_la1[28] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
}

  static private boolean jj_2_1(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_1()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(0, xla); }
  }
